# santa-card-generator

./: .dockerignore  .env.example  .gitignore  AI_SWE_SETUP_VALIDATION.md  CLAUDE.md  COMMANDS_DOCUMENTATION.md  DOCKER_README.md  FILE_INDEX.md  GEMINI_INTEGRATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  SRS.md  SetupMemoryBank-prompt.md  cookiecutter.json  docker-compose.dev.yml  docker-compose.yml  linkedin-post.md
.memory_bank/: README.md  current_tasks.md  product_brief.md  tech_stack.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/data/: employees.json  tap_p40_leaderboard.json
backend/examples/: gemini_usage_example.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  auth.py  cards.py  dependencies.py  employees.py  photocards.py  print_assets.py  tap_p40.py
backend/src/core/: __init__.py  card_service.py  exceptions.py  print_archive.py  session_manager.py  tap_p40_leaderboard.py
backend/src/integrations/: QUICK_REFERENCE.md  README.md  __init__.py  exceptions.py  gemini.py  gemini_client_google_tuned.py  photocard_prompt_agent_overrides.py  telegram.py
backend/src/models/: __init__.py  card.py  employee.py  photocard.py  print_archive.py  response.py  tap_p40.py
backend/src/repositories/: __init__.py  employee_repo.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_card_service.py  test_employee_repo.py  test_gemini.py  test_print_archive.py  test_print_assets_api.py  test_session_manager.py  test_tap_p40_api.py  test_tap_p40_leaderboard.py  test_telegram.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+66 files in other folders)
